tests/errors/generic_type_wrong_arity.dang
type Box[a] {
  pub value: a
}

Box(1) :: Box[Int!, String!]!
